Continuation dots no longer seen instead of complete folder name on hovering mouse pointer on Folder Name in App Launcher

Constinuation dots are also no longer seen when editing folder name

Bug: 870619
Change-Id: I58620f9011aacf264bf0b641c9b14e022add8b2f
Reviewed-on: https://chromium-review.googlesource.com/c/1352582
Commit-Queue: Matthew Mourgos <mmourgos@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611534}
Former-commit-id: 604a85fca8bc1c210b76182d2551291a5eed9ca2